feature: add navbar

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# [CMS]
-GATSBY_CMS_URL=http://localhost:1337
+# [GRAPHCMS]
+GRAPHCMS_ENDPOINT=
+GRAPHCMS_TOKEN=
 
 # [CONFIG]
 GATSBY_SITE_URL=http://localhost:8000
