--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-image": "^2.4.12",
     "gatsby-plugin-alias-imports": "^1.0.5",
     "gatsby-plugin-google-analytics": "^2.3.10",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-manifest": "^2.4.17",
     "gatsby-plugin-offline": "^3.2.16",
     "gatsby-plugin-react-helmet": "^3.3.9",
@@ -24,6 +25,7 @@
     "gatsby-plugin-sharp": "^2.6.17",
     "gatsby-plugin-sitemap": "^2.4.10",
     "gatsby-source-filesystem": "^2.3.18",
+    "gatsby-source-graphcms": "^2.1.1",
     "gatsby-source-strapi": "0.0.12",
     "gatsby-transformer-sharp": "^2.5.10",
     "node-sass": "^4.14.1",
