feature: add hero component

--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
     "gatsby-source-graphcms": "^2.1.1",
     "gatsby-source-strapi": "0.0.12",
     "gatsby-transformer-sharp": "^2.5.10",
+    "graphcms-image": "^1.1.0-beta4",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-media": "^1.10.0"
   },
   "devDependencies": {
     "husky": "^4.2.5",
