--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-media": "^1.10.0"
+    "react-media": "^1.10.0",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "husky": "^4.2.5",
