feature: add body scroll lock

--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "version": "0.1.0",
   "author": "Unikorns",
   "dependencies": {
+    "@n8tb1t/use-scroll-position": "^2.0.3",
     "axios-hooks": "^2.1.0",
     "axios-retry": "^3.1.8",
+    "body-scroll-lock": "^3.1.5",
     "bootstrap": "^4.5.2",
     "classnames": "^2.2.6",
     "eslint": "^7.4.0",
