--- a/package.json
+++ b/package.json
@@ -5,7 +5,13 @@
   "version": "0.1.0",
   "author": "Unikorns",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.1",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@n8tb1t/use-scroll-position": "^2.0.3",
+    "axios": "^0.21.1",
     "axios-hooks": "^2.1.0",
     "axios-retry": "^3.1.8",
     "body-scroll-lock": "^3.1.5",
@@ -39,7 +45,8 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
     "react-media": "^1.10.0",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "react-svg-worldmap": "^1.0.39"
   },
   "devDependencies": {
     "husky": "^4.2.5",
