--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-items-carousel": "^2.8.0",
     "react-media": "^1.10.0",
     "react-reveal": "^1.2.2",
     "react-svg-worldmap": "^1.0.39"
